[tool.poetry]
name = "pinry-cli"
version = "0.1.0"
description = "Pinry CLI to upload local image to remote Pinry instance"
authors = ["winkidney <winkidney@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
pinry = "pinry_cli:cmd_group"


[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
